Keep 'Apply filter' button always visible but disabled/not disabled and solve some problems in the index page

--- a/webapps/core/src/main/resources/static/css/facet.css
+++ b/webapps/core/src/main/resources/static/css/facet.css
@@ -31,8 +31,8 @@ label.facet > .show-if-checked {
     margin: 0;
 }
 
-#filter-apply {
-    display:none;
+#filter-apply:disabled {
+    background-color: #999;
 }
 
 /*
